// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders basic button 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-button__label"
      >
        <span>
          Button
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders block 1`] = `
<div>
  <div
    class="ax-button "
    data-block="true"
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-button__label"
      >
        <span>
          Button
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders color 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="secondary"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-button__label"
      >
        <span>
          Button
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders disabled 1`] = `
<div>
  <div
    class="ax-button "
    data-disabled="true"
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <i
          class="mdi mdi-bell"
        />
      </div>
      <div
        class="ax-button__label"
      >
        <span>
          Button
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders icon align 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="end"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <i
          class="mdi mdi-bell"
        />
      </div>
      <div
        class="ax-button__label"
      >
        <span>
          Button
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders icon hilight 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="true"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <i
          class="mdi mdi-bell"
        />
      </div>
      <div
        class="ax-button__label"
      >
        <span>
          Button
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders link 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <a
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      href="/test"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <i
          class="mdi mdi-bell"
        />
      </div>
      <div
        class="ax-button__label"
      >
        <span>
          Button
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`Button renders new tab link 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
    target="_blank"
  >
    <a
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      href="/test"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <i
          class="mdi mdi-bell"
        />
      </div>
      <div
        class="ax-button__label"
      >
        <span>
          Button
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`Button renders only icon 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="true"
      type="button"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders size 1`] = `
<div>
  <div
    class="ax-button "
    data-size="md"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-button__label"
      >
        <span>
          Button
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders style 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="outline"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-button__label"
      >
        <span>
          Button
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders with icon 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <i
          class="mdi mdi-bell"
        />
      </div>
      <div
        class="ax-button__label"
      >
        <span>
          Button
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders with spinner 1`] = `
<div>
  <div
    class="ax-button "
    data-busy="true"
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-icon ax-button__icon"
      >
        <i
          class="mdi mdi-bell"
        />
      </div>
      <div
        class="ax-icon ax-button__spinner ax-anim--spin"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M24 12c-0.030-1.567-0.37-3.129-0.998-4.558-0.626-1.43-1.534-2.725-2.649-3.795s-2.436-1.918-3.867-2.476c-1.43-0.561-2.967-0.829-4.486-0.796-1.519 0.030-3.031 0.36-4.414 0.969-1.384 0.607-2.638 1.488-3.673 2.568s-1.855 2.36-2.395 3.745c-0.542 1.384-0.8 2.872-0.767 4.342 0.030 1.471 0.351 2.933 0.941 4.27 0.588 1.338 1.441 2.551 2.487 3.552s2.284 1.793 3.624 2.314c1.339 0.523 2.776 0.771 4.199 0.739 1.423-0.030 2.835-0.341 4.127-0.912 1.293-0.569 2.464-1.394 3.43-2.406s1.731-2.209 2.233-3.502c0.305-0.784 0.513-1.603 0.622-2.433 0.029 0.002 0.059 0.003 0.088 0.003 0.828 0 1.5-0.672 1.5-1.5 0-0.042-0.002-0.084-0.006-0.125h0.006zM21.617 15.983c-0.55 1.247-1.347 2.377-2.324 3.309s-2.133 1.668-3.381 2.151c-1.248 0.485-2.585 0.714-3.911 0.682-1.327-0.030-2.639-0.322-3.84-0.855-1.201-0.531-2.289-1.301-3.187-2.243s-1.606-2.057-2.070-3.259c-0.466-1.202-0.685-2.489-0.653-3.768 0.031-1.279 0.312-2.541 0.826-3.696 0.512-1.155 1.254-2.202 2.162-3.066s1.981-1.544 3.138-1.989c1.156-0.447 2.394-0.656 3.624-0.624 1.23 0.031 2.443 0.303 3.552 0.798 1.11 0.493 2.115 1.207 2.944 2.081s1.481 1.905 1.908 3.016c0.428 1.111 0.628 2.298 0.596 3.48h0.006c-0.003 0.041-0.006 0.083-0.006 0.125 0 0.774 0.586 1.41 1.338 1.491-0.146 0.816-0.387 1.613-0.721 2.367z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="ax-button__label"
      >
        <span>
          Button
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button renders with tooltip 1`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-button__label"
      >
        <span>
          Button
        </span>
      </div>
    </button>
  </div>
  <div
    class="ax-popper ax-root ax-tooltip ax-bg--darkest ax-color--empty "
    data-show="true"
    data-show-arrow="true"
    style="position: fixed; left: 0px; top: 0px; min-width: 0;"
  >
    <div
      class="ax-popper--body"
    >
      <span>
        Test tooltip
      </span>
    </div>
    <div
      class="ax-popper--arrow"
      style="position: absolute;"
    />
  </div>
</div>
`;

exports[`Button renders with tooltip 2`] = `
<div>
  <div
    class="ax-button "
    data-size="default"
    data-style="default"
    data-theme="default"
  >
    <button
      class="ax-button__inner"
      data-icon-align="start"
      data-icon-hilight="false"
      data-no-label="false"
      type="button"
    >
      <div
        class="ax-button__label"
      >
        <span>
          Button
        </span>
      </div>
    </button>
  </div>
</div>
`;
